# api_axum_with_tests

./: .env_example  Cargo.toml  README.md
migrations/: 0001_create_post_table.down.sql  0001_create_post_table.up.sql  0002_add_deleted_at_to_posts.down.sql  0002_add_deleted_at_to_posts.up.sql
src/: lib.rs  main.rs  state.rs
src/database/: connect.rs  queries.rs
src/router/: mod.rs
src/router/posts/: create.rs  get_all_top_level.rs  mod.rs
tests/: app_test.rs
